// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Container
  disabled={false}
  error={null}
  htmlFor="The Label"
  label="The Label"
  required={false}
  touched={false}
>
  <Checkbox
    checked={true}
    disabled={false}
    error={null}
    onChange={[Function]}
    touched={false}
  >
    The Checkbox Label
  </Checkbox>
</Container>
`;

exports[`should render correctly when disabled 1`] = `
<Container
  disabled={true}
  error={null}
  htmlFor="The Label"
  label="The Label"
  required={false}
  touched={false}
>
  <Checkbox
    checked={true}
    disabled={true}
    error={null}
    onChange={[Function]}
    touched={false}
  >
    The Checkbox Label
  </Checkbox>
</Container>
`;

exports[`should render correctly when required 1`] = `
<Container
  disabled={false}
  error={null}
  htmlFor="The Label"
  label="The Label"
  required={true}
  touched={false}
>
  <Checkbox
    checked={true}
    disabled={false}
    error={null}
    onChange={[Function]}
    touched={false}
  >
    The Checkbox Label
  </Checkbox>
</Container>
`;

exports[`should render correctly with an error 1`] = `
<Container
  disabled={false}
  error="The Error"
  htmlFor="The Label"
  label="The Label"
  required={false}
  touched={true}
>
  <Checkbox
    checked={true}
    disabled={false}
    error="The Error"
    onChange={[Function]}
    touched={true}
  >
    The Checkbox Label
  </Checkbox>
</Container>
`;
